--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "@types/lodash.throttle": "^4.1.7",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "framer-motion": "^8.4.6",
+    "lodash.throttle": "^4.1.1",
     "next": "14.0.4",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
@@ -34,6 +37,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
