--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^6.19.0",
     "framer-motion": "^8.4.6",
     "lodash.throttle": "^4.1.1",
+    "lucide-react": "^0.312.0",
     "next": "14.0.4",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
